# PointCloudVisualizer

./: .gitignore  CMakeLists.txt  README.md  package.bat
Contact/: CMakeLists.txt  Contact.cpp  Contact.sln  README.md  Visualizer.cpp  Visualizer.h
Contact/Contact/: Contact.cpp  Contact.vcxproj  Contact.vcxproj.filters  stdafx.cpp
package/: readme.md
package/VisualizerApp/: pcl_viewer.bat
package/VisualizerAppTest/: test.bat
package/VisualizerAppTest/data/: visualizer.20190415.133706.160.principal-curvatures.0-view.curvatures.pcd  visualizer.20190415.133709.352.tub-plane-surface.0-view.0-initial-cloud.pcd  visualizer.20190415.133709.382.tub-plane-surface.0-view.1-filter-normals-y.pcd  visualizer.20190415.133709.390.tub-plane-surface.0-view.2-cleanup.pcd  visualizer.20190415.133709.392.tub-plane-surface.0-view.3-plane-fit-inliers.pcd  visualizer.20190415.133709.399.tub-plane-surface.1-view.4-surface.pcd  visualizer.20190415.133717.416.alignment-weighted.0-view.source.pcd  visualizer.20190415.133717.419.alignment-weighted.0-view.target.pcd  visualizer.20190415.133717.427.alignment-weighted.0-view.source-aligned.pcd  visualizer.20190415.133717.430.alignment-weighted.1-view.correspondences.pcd  visualizer.20190415.133720.655.alignment-score.0-view.target.pcd  visualizer.20190415.133720.804.alignment-score.0-view.source-aligned.pcd  visualizer.20190415.133720.921.alignment-score.1-view.correspondences.pcd  visualizer.20190507.160214.869.read-mesh.M0004.pcd  visualizer.20190507.160215.237.read-mesh.ScannedMesh.pcd  visualizer.20190507.160215.300.scan-initialization.transformed-scan-mesh.pcd  visualizer.20190507.160215.684.scan-initialization.aligned-scan-mesh.pcd  visualizer.20190507.160215.870.scan-initialization.biggest-comp.pcd  visualizer.20190507.160216.155.scan-initialization.final-aligned.pcd  visualizer.20190507.160216.814.principal-curvatures.curvatures.pcd  visualizer.20190507.160216.869.tub-plane-surface.0-initial-cloud.pcd  visualizer.20190507.160216.883.tub-plane-surface.1-filter-normals-y.pcd  (+36 more)
src/: CMakeLists.txt  Visualizer.cpp  Visualizer.h  Visualizer.hpp  VisualizerApp.cpp  VisualizerData.cpp  VisualizerData.h  VisualizerData.hpp  VisualizerTest.cpp
