cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(Contact)
find_package(PCL 1.9 REQUIRED COMPONENTS common io)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(Contact Contact.cpp)
target_link_libraries(Contact ${PCL_LIBRARIES})
